[package]
name = "sanctum_client"
version = "0.1.0"
edition = "2021"
description = "A project built with wasm-pack"
license = "Sanctum Group Ltd."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# "cdylib" is used when compiling a dynamic library to be loaded from another language
# "rlib" is used as an intermediate artifact and can be thought of as a "static Rust library"
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
chrono = "0.4.35"
js-sys = "0.3.69"
wasm-bindgen = "0.2.92"
web-sys = { version = "0.3.69", features = [
  "console",
  "Document",
  "Window",
  "CssStyleDeclaration",
  "HtmlElement",
  "Element",
] }
